# cli_agent_w_graphiti

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  EPISODE_BUILD_SUMMARY.md  EPISODE_STRUCTURE.md  EPISODE_VISUAL_GUIDE.md  GRAPHITI_DEBUG_GUIDE.md  GRAPHITI_MEMORY.md  LICENSE  README.md  SESSION_SUMMARY.md  USAGE_GUIDE.md  docker-compose.yml  main.py  pyproject.toml  quick_demo.py  test_conversation.py  test_episode_simple.py  test_graphiti.py  test_graphiti_simple.py
AGENTS/: 00_agent_instructions.md  00_map.md  01_hazards.md  02_business_logic.md  03_narratives.md
AGENTS/contracts/: agent.md  config.md  graphiti_client.md  main.md  tools.md  user_session.md  visualizer.md
AGENTS/playbooks/: add_cli_command.md  add_config_var.md  add_tool.md  run_and_debug.md  tune_agent_behavior.md
notebooks/: graph_explorer.ipynb
src/: __init__.py  agent.py  config.py  graphiti_client.py  logging_config.py  tools.py  user_session.py  visualizer.py
